<resources>
    <string name="app_name">Boatit</string>

    <string name="action_settings">Settings</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login_btn">LOGIN</string>
    <string name="title_activity_boats">Boats list</string>
    <string name="title_activity_details">DetailsActivity</string>
    <string name="upboat">UPBOAT</string>
    <string name="downboat">DOWNBOAT</string>
    <string name="register">REGISTER</string>
    <string name="confirm_password">Confirm password</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="progress_wait">Please wait...</string>
    <string name="detailsViewError">Error while downloading boat details</string>
    <string name="image_download_error">Errror while downloading image</string>
    <string name="comment_download_error">Error while downloading comments</string>
    <string name="boat_download_error">Error while downloading boats</string>
    <string name="login_connection_error">Network error</string>
    <string name="offline_mode">In offline mode</string>
    <string name="rating_error">Error while rating boat</string>
    <string name="new_comment_hint">Enter comment</string>
    <string name="send_comment">Send</string>
    <string name="cancel">Cancel</string>
    <string name="new_comment">New comment</string>
    <string name="new_comment_dialog_title">New comment</string>
    <string name="comment_post_error">Error while posting comment</string>
    <string name="title_activity_splash">SplashActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="login_data_empty">Username and password are required</string>
    <string name="login_failure">Login failed, check your credentials and try again</string>
    <string name="register_passwords_not_matched">Passwords do not match</string>
    <string name="register_failure">Registration failed, please check your credentials and try again</string>
</resources>
