<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:layout_width ="match_parent"
        android:layout_height ="100dp"
        android:id="@+id/new_comment_text"
        android:inputType="textCapSentences|textMultiLine"
        android:hint="@string/new_comment_hint"
        android:scrollHorizontally="false"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/new_comment_text">

        <Button
            android:id="@+id/cancel_new_comment"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.50"
            android:background="@android:color/transparent"
            android:text="@string/cancel"/>

        <Button
            android:id="@+id/send_new_comment"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.50"
            android:background="@android:color/transparent"
            android:text="@string/send_comment"/>
    </LinearLayout>

</RelativeLayout>